src/content/appearanceThemes/appearance-theme-rounded-border-ebook.css
/* replace EFL eBook Template 3 custom CSS: curved design and fancy page numbers */

/* This theme applies only to "Device 16x9 Landscape and Device 16x9 Portrait" pages. */

/* The below statements control the size and color of the marginbox. It holds the text and picture of that page.
 * The top and left numbers determine the position of the margin box on the page. */

[class*="Device"].numberedPage:not(.bloom-interactive-page) {
    --page-margin-top: 2mm;
    --page-margin-bottom: 2mm;
    --page-margin-left: 2mm;
    --page-margin-right: 2mm;
    --page-background-color: #2e2e2e; /* almost black */
    --marginBox-border-radius: 15px;
    --marginBox-padding: 1.5mm;
    --marginBox-background-color: #ffffff; /* white */

    /* set to 0 because our marginBox is white but background is dark. This has the effect of increasing the text padding on the edges. */
    --page-and-marginBox-are-same-color-multiplicand: 0;

    /* move so that page number doesn't it hide it if the text box is in the lower left */
    --formatButton-pageNumber-dodge: 20px;
}

/* using "where:" so that the user's custom appearance can override the theme if specified */
.numberedPage:where([class*="Device"]:not(.bloom-interactive-page)) {
    --topLevel-text-padding: 0.5em;
}

[class*="Device"].numberedPage:not(.bloom-interactive-page) {
    --pageNumber-extra-height: 0mm !important; /* we put the page number on top of the image so we don't need a margin boost */
}
[class*="Device"].numberedPage:not(.bloom-interactive-page)::after {
    --pageNumber-bottom: var(--page-margin-bottom);
    --pageNumber-top: unset;
    --pageNumber-font-size: 11pt;
    --pageNumber-border-radius: 50%;
    --pageNumber-background-color: #ffffff;
    --pageNumber-background-width: 33px;
    --pageNumber-always-left-margin: var(--page-margin-left);
    --pageNumber-right-margin: deliberately-invalid; /* prevents right being set at all. unset does not work. Prevent centering for this layout */
}

/* Rules for rounding the corner of images */
/* Picture on left */
.Device16x9Landscape.numberedPage
    .marginBox
    > .vertical-percent
    > .position-left
    > .split-pane-component-inner
    > .bloom-canvas {
    --image-border-radius: var(--marginBox-border-radius) 0px 0px
        var(--marginBox-border-radius); /* left corners */
}
/* Picture on right */
.Device16x9Landscape.numberedPage
    .marginBox
    > .vertical-percent
    > .position-right
    > .split-pane-component-inner
    > .bloom-canvas {
    --image-border-radius: 0px var(--marginBox-border-radius)
        var(--marginBox-border-radius) 0px; /* right corners */
}
/* Picture on top */
.Device16x9Portrait.numberedPage
    .marginBox
    > .horizontal-percent
    > .position-top
    > .split-pane-component-inner
    > .bloom-canvas {
    --image-border-radius: var(--marginBox-border-radius)
        var(--marginBox-border-radius) 0px 0px; /* top corners */
}
/* Picture on bottom */
.Device16x9Portrait.numberedPage
    .marginBox
    > .horizontal-percent
    > .position-bottom
    > .split-pane-component-inner
    > .bloom-canvas {
    --image-border-radius: 0px 0px var(--marginBox-border-radius)
        var(--marginBox-border-radius); /* bottom corners */
}
/* Picture only */
[class*="Device"].numberedPage
    .marginBox
    > .split-pane-component-inner
    > .bloom-canvas {
    --image-border-radius: var(--marginBox-border-radius); /* all corners */
}

/* End Rules for rounding the corner of images */

.Device16x9Landscape.numberedPage.pictureOnRight.pictureOnRight::after {
    --pageNumber-right-margin: var(--page-margin-right);
    --pageNumber-left-margin: deliberately-invalid; /* prevents left being set at all. unset does not work. Prevent centering for this layout */
    --pageNumber-always-left-margin: deliberately-invalid; /* prevents left being set at all. unset does not work. Prevent centering for this layout */
}

